--- a/templates/about.html
+++ b/templates/about.html
@@ -23,6 +23,17 @@
             <br>
         {% endfor %}
     </div>
+    <div class="col-lg-8 col-lg-push-2">
+        <h3 class="page-header"> Thank you <br><small>Message to you, from the Developer</small></h3>
+        <p class="lead">Dear {{user}},</p>
+        <p class="lead">Thank you for showing us your support by signing up on Ritrew, we hope you find your passion in writing on this platform, and help us create a community which thrives on sharing our writing with the world.</p>
+        <p class="lead">We hope you will like the website, it was developed by keeping a writer in mind and to help you back by providing proper user feedback.</p>
+        <p class="lead">You can write an email to us at <a href="mailto:alikhundmiri.developer@gmail.com?Subject=From%20Your%20User" target="_top">alikhundmiri.developer@gmail.com</a> anytime with your suggestions, ideas, and complaints. we would do everything in my control to help you back.</p>
+        <hr>
+        <p class="lead">This website is developed and maintained by a single person. This being my only source of income, I ask the community to help me continue the work on this website and bring food on the table. I don't intent to monetise this website though ads and clutter this community. I would appriciate you help very much.</p>
+        <p>-Ali</p>
+        <a href="https://www.patreon.com/bePatron?u=5303033" data-patreon-widget-type="become-patron-button">Become a Patron!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
+    </div>
 </div> <!-- /container -->
 
 {% endblock %}
