--- a/dashboard/templates/dashboard/all_poems_list.html
+++ b/dashboard/templates/dashboard/all_poems_list.html
@@ -43,9 +43,9 @@
 <!-- ########### P O E M S    P A G E ################## -->
                     {% if name == 'd_a_poem' %}
                         <div class="col-lg-11 ">
-                            <div class="jumbotron">
-                                <h3>Report</h3>
-                                {% if poems.count < 1 %}
+                            {% if poems.count < 1 %}
+                                <div class="jumbotron">
+                                    <h3>Report</h3>
                                     <p>Looks like you have not yet published any Poems,<br> Heres, a Guide for you to get started.<br></p>
                                     <ol>
                                         <li>Click on Add new button on the top right corner of this page.</li>
@@ -55,33 +55,41 @@
                                         <li>???</li>
                                         <li>Profit.</li>
                                     </ol>
-                                {% else %}
-                                    <p>
-                                        You have written a total of 
-                                        <b>{{poems|length}}</b>
-                                        poem{{poems|pluralize}}
-                                        since dd-mm-yy, of which 
-                                        <b>
-                                            {% if poem_published|length == poems|length %}
-                                                all 
-                                            {% else %}
-                                                {{poem_published|length}}
-                                            {% endif %}
-                                        </b>
-                                        {{ poem_published|pluralize:"is,are" }}<!-- This will automatically choose is or are depending on number -->
-                                        published and 
-                                        <b>
-                                            {% if poem_draft|length == 0 %}
-                                                none 
-                                            {% else %} 
-                                                {{poem_draft|length}}
-                                            {% endif %}
-                                        </b>
-                                        {{ poem_draft|pluralize:"is,are" }}<!-- This will automatically choose is or are depending on number -->
-                                        in draft.
-                                    </p>
-                                {% endif %}
-                            </div>
+                                </div>
+                            {% else %}
+                                <div class="col-lg-6">                                    
+                                    <canvas id="myChart_pub_vs_draft" width="400" height="200"></canvas>
+                                </div>                            
+                                <div class="col-lg-6">
+                                    <div class="jumbotron">
+                                        <h3>Report</h3>                            
+                                        <p>
+                                            You have written a total of 
+                                            <b>{{poems|length}}</b>
+                                            poem{{poems|pluralize}}
+                                            since {{ user.date_joined|date:"jS F Y" }}, of which 
+                                            <b>
+                                                {% if poem_published|length == poems|length %}
+                                                    all 
+                                                {% else %}
+                                                    {{poem_published|length}}
+                                                {% endif %}
+                                            </b>
+                                            {{ poem_published|pluralize:"is,are" }}<!-- This will automatically choose is or are depending on number -->
+                                            published and 
+                                            <b>
+                                                {% if poem_draft|length == 0 %}
+                                                    none 
+                                                {% else %} 
+                                                    {{poem_draft|length}}
+                                                {% endif %}
+                                            </b>
+                                            {{ poem_draft|pluralize:"is,are" }}<!-- This will automatically choose is or are depending on number -->
+                                            in draft.
+                                        </p>
+                                    </div>
+                                </div>
+                            {% endif %}
                         </div>
 
 <!-- ###########################      A L L    D R A F T    P O E M S     ###################### -->
@@ -91,7 +99,7 @@
                             <div class="col-lg-11">
                                 <h2>Poem Drafts</h2>
                                 <div class="table-responsive">
-                                    <table class="table table-bordered table-hover table-striped">
+                                    <table id='poem_draft_table' class="table table-bordered table-hover table-striped">
                                         <thead>
                                             <tr>
                                                 <th>sno</th>
@@ -138,7 +146,7 @@
                             <div class="col-lg-11">
                                 <h2>Published Poems</h2>
                                 <div class="table-responsive">
-                                    <table class="table table-bordered table-hover table-striped">
+                                    <table id="poem_published_table" class="table table-bordered table-hover table-striped">
                                         <thead>
                                             <tr>
                                                 <th>sno</th>
@@ -181,7 +189,7 @@
                             <div class="col-lg-11 ">
                                 <h2>{{content_name}}</h2>
                                 <div class="table-responsive">
-                                    <table class="table table-bordered table-hover table-striped">
+                                    <table id="all_poems_table" class="table table-bordered table-hover table-striped">
                                         <thead>
                                             <tr>
                                                 <th>sno</th>
@@ -240,5 +248,63 @@
     <!-- /#wrapper -->
 {% endblock content_header %}
 </body>
+{% block custom_javascript %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>
+
+    <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.15/js/jquery.dataTables.js"></script>
+    <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.15/css/jquery.dataTables.css">  
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('#poem_draft_table').DataTable();
+            $('#poem_published_table').DataTable();
+            $('#all_poems_table').DataTable();
+        });
+    </script>
+    
+    <script>
+        $(document).ready(function(){
+            var endpoint = "dashboard/api/chart/data/"
+            var data_written = [{{ poem_draft.count }},{{ poem_published.count }}]
+            var labels = ["Poems Draft", "Poems Published"]
+            $.ajax({
+                method : 'GET',
+                url : endpoint,
+                success: function(data) {
+                    // labels = data.labels
+                    // defaultData = data.default
+                    console.log(data)
+                    // SHOWING THE CHART HERE
+                    var ctx = document.getElementById("myChart_pub_vs_draft").getContext('2d');
+                    var myChart = new Chart(ctx, {
+                        type: 'pie',
+                        data: {
+                            labels: labels,
+                            datasets: [{
+                                label: 'Published',
+                                data: data_written,
+                                backgroundColor: [
+                                    'rgba(153, 102, 255, 0.9)',
+                                    'rgba(255, 99, 132, 0.9)',
+                                    'rgba(54, 162, 235, 0.9)',
+                                    'rgba(255, 206, 86, 0.9)',
+                                    'rgba(75, 192, 192, 0.9)',
+                                    'rgba(255, 159, 64, 0.9)'
+                                ],
+                                borderWidth: 0
+                            }
+                        ]},
+                    });
+                    // END OF SHOWING THIS CHART HERE
+                },
+                error: function(error_data) {
+                    console.log("error")
+                    console.log(error_data)
+                },
+
+            })
+        })
+    </script>
+
+{% endblock %}
 
 </html>
