--- a/dashboard/templates/dashboard/all_stories_list.html
+++ b/dashboard/templates/dashboard/all_stories_list.html
@@ -41,9 +41,9 @@
 <!-- ########### S T O R I E S    P A G E ################## -->
                     {% if name == 'd_a_story' %}
                         <div class="col-lg-11">
-                            <div class="jumbotron">
-                                <h3>Report</h3>
-                                {% if stories.count < 1 %}
+                            {% if stories.count < 1 %}
+                                <div class="jumbotron">
+                                    <h3>Report</h3>
                                     <p>Looks like you have not yet published any Stories,<br> Heres, a Guide for you to get started.<br></p>
                                     <ol>
                                         <li>Click on Add new button on the top right corner of this page.</li>
@@ -53,31 +53,39 @@
                                         <li>???</li>
                                         <li>Profit.</li>
                                     </ol>
-                                {% else %}                                
-                                    <p>You have written a total of 
-                                    <b>{{ stories|length }}</b>
-                                    stor{{ stories|pluralize:"y,ies" }}
-                                    since dd-mm-yy, of which 
-                                    <b>
-                                        {% if story_published|length == stories|length %}
-                                            all 
-                                        {% else %}
-                                            {{ story_published|length }}
-                                        {% endif %}
-                                    </b>
-                                    {{ story_published|pluralize:"is,are" }}<!-- This will automatically choose is or are depending on number -->                            
-                                    published and 
-                                    <b>
-                                        {% if story_draft|length == 0 %}
-                                            none 
-                                        {% else %} 
-                                            {{story_draft|length}}
-                                        {% endif %}
-                                    </b>
-                                    {{ story_draft|pluralize:"is,are" }}<!-- This will automatically choose is or are depending on number -->                            
-                                    in draft.</p>
-                                {% endif %}
-                            </div>
+                                </div>
+                            {% else %}
+                                <div class="col-lg-6">
+                                    <canvas id="myChart_pub_vs_draft" width="400" height="200"></canvas>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="jumbotron">
+                                        <h3>Report</h3>
+                                        <p>You have written a total of 
+                                        <b>{{ stories|length }}</b>
+                                        stor{{ stories|pluralize:"y,ies" }}
+                                        since {{ user.date_joined|date:"jS F Y" }}, of which 
+                                        <b>
+                                            {% if story_published|length == stories|length %}
+                                                all 
+                                            {% else %}
+                                                {{ story_published|length }}
+                                            {% endif %}
+                                        </b>
+                                        {{ story_published|pluralize:"is,are" }}<!-- This will automatically choose is or are depending on number -->                            
+                                        published and 
+                                        <b>
+                                            {% if story_draft|length == 0 %}
+                                                none 
+                                            {% else %} 
+                                                {{story_draft|length}}
+                                            {% endif %}
+                                        </b>
+                                        {{ story_draft|pluralize:"is,are" }}<!-- This will automatically choose is or are depending on number -->                            
+                                        in draft.</p>
+                                    </div>
+                                </div>
+                            {% endif %}
                         </div>
 
 <!-- ########################          A L L    D R A F T    S T O R Y     ########################## -->
@@ -86,7 +94,7 @@
                             <div class="col-lg-11">
                                 <h2>Story Drafts</h2>
                                 <div class="table-responsive">
-                                    <table class="table table-bordered table-hover table-striped">
+                                    <table id="story_draft_table" class="table table-bordered table-hover table-striped">
                                         <thead>
                                             <tr>
                                                 <th>sno</th>
@@ -132,7 +140,7 @@
                             <div class="col-lg-11">
                                 <h2>Published Stories</h2>
                                 <div class="table-responsive">
-                                    <table class="table table-bordered table-hover table-striped">
+                                    <table id="story_published_table" class="table table-bordered table-hover table-striped">
                                         <thead>
                                             <tr>
                                                 <th>sno</th>
@@ -177,7 +185,7 @@
                             <div class="col-lg-11">
                                 <h2>{{content_name}}</h2>
                                 <div class="table-responsive">
-                                    <table class="table table-bordered table-hover table-striped">
+                                    <table id="all_stories_table" class="table table-bordered table-hover table-striped">
                                         <thead>
                                             <tr>
                                                 <th>sno</th>
@@ -235,5 +243,61 @@
     <!-- /#wrapper -->
 {% endblock content_header %}
 </body>
+{% block custom_javascript %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js "></script>
+    <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.15/js/jquery.dataTables.js"></script>
+    <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.15/css/jquery.dataTables.css">  
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('#story_draft_table').DataTable();
+            $('#story_published_table').DataTable();
+            $('#all_stories_table').DataTable();
+        });
+    </script>    
+    <script>
+        $(document).ready(function(){
+            var endpoint = "dashboard/api/chart/data/"
+            var data_written = [{{ story_draft.count }},{{ story_published.count }}]
+            var labels = ["Stories Draft", "Stories Published"]
+            $.ajax({
+                method : 'GET',
+                url : endpoint,
+                success: function(data) {
+                    // labels = data.labels
+                    // defaultData = data.default
+                    console.log(data)
+                    // SHOWING THE CHART HERE
+                    var ctx = document.getElementById("myChart_pub_vs_draft").getContext('2d');
+                    var myChart = new Chart(ctx, {
+                        type: 'pie',
+                        data: {
+                            labels: labels,
+                            datasets: [{
+                                label: 'Published',
+                                data: data_written,
+                                backgroundColor: [
+                                    'rgba(153, 102, 255, 0.9)',
+                                    'rgba(255, 99, 132, 0.9)',
+                                    'rgba(54, 162, 235, 0.9)',
+                                    'rgba(255, 206, 86, 0.9)',
+                                    'rgba(75, 192, 192, 0.9)',
+                                    'rgba(255, 159, 64, 0.9)'
+                                ],
+                                borderWidth: 0
+                            }
+                        ]},
+                    });
+                    // END OF SHOWING THIS CHART HERE
+                },
+                error: function(error_data) {
+                    console.log("error")
+                    console.log(error_data)
+                },
+
+            })
+        })
+    </script>
+
+{% endblock %}
 
 </html>
