--- a/templates/footer.html
+++ b/templates/footer.html
@@ -15,4 +15,11 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12" style=" text-align: center;">
+                <p class="lead" style="font-size: 0.8em; color: #cecaca">Made with <i class="fa fa-heart"></i> love by <a href="http://www.alikhundmiri.com">Ali Khundmiri</a>.</p>
+            </div>
+        </div>        
+    </div>
 </footer>
