--- a/dashboard/templates/dashboard/blank-page.html
+++ b/dashboard/templates/dashboard/blank-page.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 <head>
 {% block title %}
-    Blank Placeholder | Dashboard | Ayesha Pages 
+    Blank Placeholder | Dashboard | Ritrew
 {% endblock %}
 </head>
 <body>
@@ -41,7 +41,6 @@
             <!-- /.container-fluid -->
 
         </div>
-        {% include 'footer.html' %}
         <!-- /#page-wrapper -->
 
     </div>
