--- a/dashboard/templates/dashboard/d_nav_bar.html
+++ b/dashboard/templates/dashboard/d_nav_bar.html
@@ -72,6 +72,13 @@
             <li>
                 <a href="{% url 'logout' %}"><i class="fa fa-fw fa-power-off"></i> Logout</a>
             </li>
+            <li>
+                <hr>
+            </li>
+            <hr>
+            <li>
+                {% include 'footer.html' %}      
+            </li>
         </ul>
     </div>
     <!-- /.navbar-collapse -->
