--- a/dashboard/templates/dashboard/dashboard_base.html
+++ b/dashboard/templates/dashboard/dashboard_base.html
@@ -237,11 +237,14 @@
             </div>
             <!-- /.container-fluid -->
         </div>
-        {% include 'footer.html' %}
         <!-- /#page-wrapper -->
     </div>
     <!-- /#wrapper -->
 {% endblock content_header %}
+
+{% block footer %}
+
+{% endblock %}
 
 {% block custom_javascript %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js "></script>
