--- a/dashboard/templates/dashboard/guide.html
+++ b/dashboard/templates/dashboard/guide.html
@@ -2,17 +2,17 @@
 {% load staticfiles %}
 <head>
 {% block title %}
-    Blank Placeholder | Dashboard | Ayesha Pages 
+    Guide and Features of Ritrew | Dashboard | Ritrew
 {% endblock %}
 </head>
 <body>
 {% block content_header %}
 
     <div id="wrapper">
-    {% block d_nav_bar %}
+    <!-- {% block d_nav_bar %} -->
         <!-- Navigation -->
         {% include "dashboard/d_nav_bar.html" %}
-    {% endblock d_nav_bar %}
+    <!-- {% endblock d_nav_bar %} -->
 
         <div id="page-wrapper">
 
@@ -82,24 +82,36 @@
                             </li>
                         </ol>
 
+                        <h3 class="page-header"> Known Bugs<br><small>as of 19th August 2017, our developer is aware of these bugs and is trying everything possible to fix these.</small></h3>
+                        <ol>
+                            <li>Edit button for any of riddles is not working</li>
+                            <li>The Double navigation on the top on this page</li>
+                            <!-- <li>Search Feature</li> -->
+                            <!-- <li><p> Viewing Instant Preview in editing old writing/ new writing. -->
+<!--                                     <small style="color: #c0c0c0">
+                                        Pro Version Feature. Available for limited time.
+                                    </small> -->
+                                <!-- </p> -->
+                            <!-- </li> -->
+                        </ol>
+
                         <h3 class="page-header"> Thank you <br><small>Message to you, from the Developer</small></h3>
-                        <p class="lead">Dear {{user}},</p>
-                        <p class="lead">Thank you for showing us your support by signing up on Ritrew, we hope you find your passion in writing on this platform, and help us create a community which thrives on sharing our writing with the world.</p>
-                        <p class="lead">We hope you will like the website, it was developed by keeping a writer in mind and to help you back by providing proper user feedback.</p>
-                        <p class="lead">You can write an email to us at <a href="mailto:alikhundmiri.developer@gmail.com?Subject=From%20Your%20User" target="_top">alikhundmiri.developer@gmail.com</a> anytime with your suggestions, ideas, and complaints. we would do everything in my control to help you back.</p>
-                        <hr>
-                        <p class="lead">This website is developed and maintained by a single person. This being my only source of income, I ask the community to help me continue the work on this website and bring food on the table. I don't intent to monetise this website though ads and clutter this community. I would appriciate you help very much.</p>
-                        <p>-Ali</p>
-                        <a href="https://www.patreon.com/bePatron?u=5303033" data-patreon-widget-type="become-patron-button">Become a Patron!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
+                        <div style="margin: 10px ,10px, 10px, 10px">
+                            <p class="lead">Dear {{user}},</p>
+                            <p class="lead">Thank you for showing us your support by signing up on Ritrew, we hope you find your passion in writing on this platform, and help us create a community which thrives on sharing our writing with the world.</p>
+                            <p class="lead">We hope you will like the website, it was developed by keeping a writer in mind and to help you back by providing proper user feedback.</p>
+                            <p class="lead">You can write an email to us at <a href="mailto:alikhundmiri.developer@gmail.com?Subject=From%20Your%20User" target="_top">alikhundmiri.developer@gmail.com</a> anytime with your suggestions, ideas, and complaints. we would do everything in my control to help you back.</p>
+                            <hr>
+                            <p class="lead">This website is developed and maintained by a single person. This being my only source of income, I ask the community to help me continue the work on this website and bring food on the table. I don't intent to monetise this website though ads and clutter this community. I would appriciate you help very much.</p>
+                            <p>-Ali</p>
+                            <a href="https://www.patreon.com/bePatron?u=5303033" data-patreon-widget-type="become-patron-button">Become a Patron!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>                            
+                        </div>
                     </div>
                 </div>
             </div>
             <!-- /.container-fluid -->
-
         </div>
-        {% include 'footer.html' %}
         <!-- /#page-wrapper -->
-
     </div>
     <!-- /#wrapper -->
 {% endblock content_header %}
