--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,16 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <!-- Google analytics Monitor Script -->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-104889635-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </head>
 
 <body>
@@ -63,8 +73,11 @@
         </div>
         <div class="col-lg-8 col-md-8 col-sm-8"> </div>
     </div>
+    
     {% block footer %}
-        {% include 'footer.html' %}
+        <footer>
+            {% include 'footer.html' %}
+        </footer>
     {% endblock %}
 
 
