--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,25 +1,24 @@
-<footer>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <ul class="list-inline">
-                    <li>
-                        <a href="{% url 'writer:list' %}">Home</a>
-                    </li>
-                    <li class="footer-menu-divider">&sdot;</li>
-                    <li>
-                        <a href="{% url 'about' %}">About</a>
-                    </li>
-                </ul>
-                <p class="copyright text-muted small">Copyright &copy; Ayesha Pages, 2017. All Rights Reserved<br>All the content on this website is original, unless otherwise stated.</p>
-            </div>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <ul class="list-inline">
+                <li>
+                    <a href="{% url 'writer:list' %}">Home</a>
+                </li>
+                <li class="footer-menu-divider">&sdot;</li>
+                <li>
+                    <a href="{% url 'about' %}">About</a>
+                </li>
+            </ul>
+            <p class="copyright text-muted small">Copyright &copy; Ali Khundmiri, 2017.<br>All Rights Reserved.
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12" style=" text-align: center;">
-                <p class="lead" style="font-size: 0.8em; color: #cecaca">Made with <i class="fa fa-heart"></i> love by <a href="http://www.alikhundmiri.com">Ali Khundmiri</a>.</p>
-            </div>
-        </div>        
-    </div>
-</footer>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12" style=" text-align: center;">
+            <p class="lead" style="font-size: 0.8em; color: #cecaca">Made with <i class="fa fa-heart"></i> love by <a href="http://www.alikhundmiri.com">Ali Khundmiri</a>.</p>
+        </div>
+    </div>        
+</div>
+
